; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_sysv_msg.c_mac_sysvmsq_check_enqueue.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_sysv_msg.c_mac_sysvmsq_check_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msg = type { i32 }
%struct.msqid_kernel = type { i32 }

@sysvmsq_check_enqueue = common dso_local global i32 0, align 4
@mac_sysvmsg_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_sysvmsq_check_enqueue(i32 %0, %struct.msg* %1, %struct.msqid_kernel* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.msg*, align 8
  %6 = alloca %struct.msqid_kernel*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.msg* %1, %struct.msg** %5, align 8
  store %struct.msqid_kernel* %2, %struct.msqid_kernel** %6, align 8
  %8 = load i32, i32* @sysvmsq_check_enqueue, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.msg*, %struct.msg** %5, align 8
  %11 = load %struct.msg*, %struct.msg** %5, align 8
  %12 = getelementptr inbounds %struct.msg, %struct.msg* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.msqid_kernel*, %struct.msqid_kernel** %6, align 8
  %15 = load %struct.msqid_kernel*, %struct.msqid_kernel** %6, align 8
  %16 = getelementptr inbounds %struct.msqid_kernel, %struct.msqid_kernel* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @MAC_CHECK(i32 %8, i32 %9, %struct.msg* %10, i32 %13, %struct.msqid_kernel* %14, i32 %17)
  %19 = load i32, i32* %7, align 4
  ret i32 %19
}

declare dso_local i32 @MAC_CHECK(i32, i32, %struct.msg*, i32, %struct.msqid_kernel*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
